added for debug pinned thread and set value of virtual thread scheduler